--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -35,19 +35,20 @@
     <!-- ========================= End of Navbar ======================================= -->
     <header>
         <div class="container header__container">
-           <div class="header__left">
-            <h1>Grow your skills to andvance your career path</h1>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing alit. Quisquam seape animi, ad quis et atque iste placeat minus ipsa rem?
-            </p>
-            <a href="couses.html" class="btn btn-primary">GEt Started</a>
-           </div> 
-
-           <div class="header__right">
-            <div class="header__right-image">
-                <img src="images/header.svg" alt="">
+            <div class="header__left">
+                <h1>Grow your skills to andvance your career path</h1>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing alit. Quisquam seape animi, ad quis et atque iste
+                    placeat minus ipsa rem?
+                </p>
+                <a href="couses.html" class="btn btn-primary">GEt Started</a>
             </div>
-           </div>
+
+            <div class="header__right">
+                <div class="header__right-image">
+                    <img src="images/header.svg" alt="">
+                </div>
+            </div>
         </div>
     </header>
     <!-- ========================= End of Header ======================================= -->
@@ -56,7 +57,9 @@
             <div class="categories__left">
                 <h1>Categories</h1>
                 <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi, quam dolores, magni maiores aperiam quasi vero repellat, ducimus tempora sint fuga. Possimus officiis adipisci labore nobis ipsam non assumenda ea?
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi, quam dolores, magni maiores
+                    aperiam quasi vero repellat, ducimus tempora sint fuga. Possimus officiis adipisci labore nobis
+                    ipsam non assumenda ea?
                 </p>
                 <a href="#" class="btn">Learn More</a>
             </div>
@@ -99,9 +102,59 @@
             </div>
         </div>
     </section>
-        <!-- ========================= End of Categories ==================================== -->
+    <!-- ========================= End of Categories ==================================== -->
+    <section class="couses">
+        <h2>Our Popular Courses</h2>
+        <div class="container courses__container">
+            <article class="course">
+                <div class="course__image">
+                    <img src="images/course1.jpg">
+                </div>
+                <div class="course__info">
+                    <h4>Responsivo Social Media Website UI Desing</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia consectetur sed quos provident
+                        expedita ad natus.
+                    </p>
+                    <a href="couses.html" class="btn btn-primary">Learn More</a>
+                </div>
 
-        <script src="js/main.js"></script>
+            </article>
+
+            <article class="course">
+                <div class="course__image">
+                    <img src="images/course2.jpg">
+                </div>
+                <div class="course__info">
+                    <h4>Responsivo SmartHome Website Design</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia consectetur sed quos provident
+                        expedita ad natus.
+                    </p>
+                    <a href="couses.html" class="btn btn-primary">Learn More</a>
+                </div>
+
+            </article>
+
+            <article class="course">
+                <div class="course__image">
+                    <img src="images/course3.jpg">
+                </div>
+                <div class="course__info">
+                    <h4>Responsivo Admin Dashboard UI Desing</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia consectetur sed quos provident
+                        expedita ad natus.
+                    </p>
+                    <a href="couses.html" class="btn btn-primary">Learn More</a>
+                </div>
+
+            </article>
+        </div>
+    </section>
+    <!-- ========================= End of Popular Courses ==================================== -->
+
+    <script src="js/main.js"></script>
 </body>
 
 </html>
